[gd_scene load_steps=4 format=3 uid="uid://b40w1sker0gy6"]

[ext_resource type="StyleBox" uid="uid://dstnxm2dm80p7" path="res://Entities/UI/Styles/ui_border_style.tres" id="1_b5be6"]
[ext_resource type="Script" uid="uid://d2alxsp2udo0h" path="res://Entities/UI/ShopPanel/shop_panel.gd" id="2_js8xq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ntv6"]
draw_center = false
border_width_top = 5
border_color = Color(0.533333, 0.294118, 0.168627, 1)

[node name="ShopPanel" type="PanelContainer"]
custom_minimum_size = Vector2(320, 720)
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 330.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_styles/panel = ExtResource("1_b5be6")
script = ExtResource("2_js8xq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(320, 720)
layout_mode = 2

[node name="UpgradeScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(320, 128)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="UpgradeGridContainer" type="GridContainer" parent="VBoxContainer/UpgradeScrollContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 5

[node name="ShopScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8ntv6")

[node name="ShopItemContainer" type="VBoxContainer" parent="VBoxContainer/ShopScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
